fix(select): prevent labels from overflowing
Prevents the select labels from overflowing their parent.

Closes #7865.

--- a/src/components/select/select.scss
+++ b/src/components/select/select.scss
@@ -109,7 +109,7 @@ md-select {
   }
 
   *:first-child {
-    flex: 1 0 auto;
+    flex: 1 1 auto;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
